// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serverless-plugin-write-env-vars diff could not find locally compiled template unsuccessfully triggers diff 1`] = `".serverless/cloudformation-template-update-stack.json could not be found: run \"sls package\" first."`;

exports[`serverless-plugin-write-env-vars diff runs diff without changes successfully triggers diff 1`] = `
TemplateDiff {
  "conditions": DifferenceCollection {
    "diffs": {},
  },
  "iamChanges": IamChanges {
    "managedPolicies": DiffableCollection {
      "additions": [],
      "newElements": [],
      "oldElements": [],
      "removals": [],
    },
    "statements": DiffableCollection {
      "additions": [],
      "newElements": [],
      "oldElements": [],
      "removals": [],
    },
  },
  "mappings": DifferenceCollection {
    "diffs": {},
  },
  "metadata": DifferenceCollection {
    "diffs": {},
  },
  "outputs": DifferenceCollection {
    "diffs": {},
  },
  "parameters": DifferenceCollection {
    "diffs": {},
  },
  "resources": DifferenceCollection {
    "diffs": {},
  },
  "securityGroupChanges": SecurityGroupChanges {
    "egress": DiffableCollection {
      "additions": [],
      "newElements": [],
      "oldElements": [],
      "removals": [],
    },
    "ingress": DiffableCollection {
      "additions": [],
      "newElements": [],
      "oldElements": [],
      "removals": [],
    },
  },
  "unknown": DifferenceCollection {
    "diffs": {},
  },
}
`;

exports[`serverless-plugin-write-env-vars diff successfully triggers diff runs diff with defaults 1`] = `
TemplateDiff {
  "conditions": DifferenceCollection {
    "diffs": {},
  },
  "iamChanges": IamChanges {
    "managedPolicies": DiffableCollection {
      "additions": [],
      "newElements": [],
      "oldElements": [],
      "removals": [],
    },
    "statements": DiffableCollection {
      "additions": [],
      "newElements": [],
      "oldElements": [],
      "removals": [],
    },
  },
  "mappings": DifferenceCollection {
    "diffs": {},
  },
  "metadata": DifferenceCollection {
    "diffs": {},
  },
  "outputs": DifferenceCollection {
    "diffs": {},
  },
  "parameters": DifferenceCollection {
    "diffs": {},
  },
  "resources": DifferenceCollection {
    "diffs": {},
  },
  "securityGroupChanges": SecurityGroupChanges {
    "egress": DiffableCollection {
      "additions": [],
      "newElements": [],
      "oldElements": [],
      "removals": [],
    },
    "ingress": DiffableCollection {
      "additions": [],
      "newElements": [],
      "oldElements": [],
      "removals": [],
    },
  },
  "unknown": DifferenceCollection {
    "diffs": {
      "foo": Difference {
        "isDifferent": true,
        "newValue": "foo",
        "oldValue": "bar",
      },
    },
  },
}
`;

exports[`serverless-plugin-write-env-vars downloadTemplate with successful CloudFormation call downloads currently deployed template 1`] = `
"{
  \"foo\": \"bar\"
}"
`;

exports[`serverless-plugin-write-env-vars downloadTemplate with successful CloudFormation call downloads currently deployed template with custom stackName 1`] = `
"{
  \"foo\": \"bar\"
}"
`;

exports[`serverless-plugin-write-env-vars downloadTemplate with successful CloudFormation call downloads currently deployed template with preV1Resources flag 1`] = `
"{
  \"foo\": \"bar\"
}"
`;

exports[`serverless-plugin-write-env-vars downloadTemplate with unsuccessful CloudFormation call could not download deployed template 1`] = `"Stack with id foo-foo does not exist"`;
